--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
     "description": "vichan imageboard",
     "type": "project",
     "require": {
+        "ext-mbstring": ">=5.4",
+        "ext-gd": ">=5.4",
+        "ext-pdo": ">=5.4",
         "twig/twig": "^1.44.2",
         "lifo/ip": "^1.0",
         "gettext/gettext": "^1.0",
