--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
     "name": "vichan-devel/vichan",
     "description": "vichan imageboard",
     "type": "project",
+    "config": {
+        "platform": {
+            "php": ">=7.4"
+        }
+    },
     "require": {
         "ext-mbstring": ">=7.4",
         "ext-gd": ">=7.4",
